--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,6 @@ body {
   border: transparent;
   color: white;
   font-size: 1.75rem;
-  margin-right: 1rem;
   padding: 0.25rem 0.5rem;
   font-family: myFont;
 }
@@ -170,14 +169,33 @@ input[name='search'] {
 }
 #addrec {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto auto;
 }
-#addrec a {
+#addrec > div {
   display: grid;
   justify-content: center;
-  text-decoration: none;
 }
 #addrec p {
   display: grid;
-  justify-content: right;
+  justify-content: center;
+  font-size: 1.5rem;
+  margin-top: 0.25rem;
+}
+a {
+  margin-right: 0.5rem;
+  margin-left: 0.5rem;
+  text-decoration: none;
+}
+ul {
+  display: grid;
+  list-style-type: none;
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.recipediv {
+  display: grid;
+  justify-content: center;
+  padding: 0.5rem;
+  font-size: 2rem;
 }
