--- a/styles.css
+++ b/styles.css
@@ -196,6 +196,25 @@ ul {
 .recipediv {
   display: grid;
   justify-content: center;
+  grid-template-columns: 7.5% 7.5% 75%;
   padding: 0.5rem;
   font-size: 2rem;
+  grid-item
+}
+label {
+  font-size: 1rem;
+}
+
+li {
+  display: grid;
+  justify-content: center;
+}
+
+.icona{
+  display: flex;
+  justify-content: center;
+}
+
+i {
+  margin-top: 0.25rem;
 }
