--- a/styles.css
+++ b/styles.css
@@ -196,11 +196,11 @@ ul {
 .recipediv {
   display: grid;
   justify-content: center;
-  grid-template-columns: 7.5% 7.5% 75%;
+  grid-template-columns: 0.25fr 0.25fr 2fr;
   padding: 0.5rem;
   font-size: 2rem;
-  grid-item
 }
+
 label {
   font-size: 1rem;
 }
@@ -210,7 +210,7 @@ li {
   justify-content: center;
 }
 
-.icona{
+.icona {
   display: flex;
   justify-content: center;
 }
