--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@ body {
   justify-content: right;
 }
 
-input[name='search'] {
+#searchdb {
   padding: 0.5rem;
   margin-bottom: 0.25rem;
 }
@@ -157,7 +157,7 @@ input[name='search'] {
   display: inline-flex;
   vertical-align: top;
   position: relative;
-  top: 0.1rem;
+  padding-bottom: 0.25rem;
 }
 #searchf {
   margin-top: 0.25rem;
