--- a/styles.css
+++ b/styles.css
@@ -345,3 +345,25 @@ input,
 textarea {
   font-family: myFont;
 }
+
+#public {
+  font-size: 1.5rem;
+  padding: 0.25rem;
+}
+#upload_widget {
+  color: white;
+  font-size: 1.5rem;
+  border-radius: 0.25rem;
+  padding: 0.25rem 0.5rem;
+}
+#upload_widget:hover {
+  border-radius: 0.25rem;
+  color: var(--main-color);
+  background-color: white;
+  padding: 0.25rem 0.5rem;
+  cursor: pointer;
+}
+
+#upload_widget:disabled {
+  cursor: not-allowed;
+}
