--- a/styles.css
+++ b/styles.css
@@ -232,6 +232,10 @@ i {
   margin-top: 0.25rem;
 }
 
+.reclink {
+  text-align: center;
+}
+
 /* recipe addition form layout */
 
 #addform {
@@ -366,4 +370,46 @@ textarea {
 
 #upload_widget:disabled {
   cursor: not-allowed;
+}
+
+/* modal popup styling - taken from W3Schools*/
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: var(--main-color);
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 2px solid white;
+  border-radius: 6px;
+  width: 80%; /* Could be more or less, depending on screen size */
+  word-break: break-all;
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
