--- a/styles.css
+++ b/styles.css
@@ -441,7 +441,7 @@ textarea {
   display: grid;
   justify-content: center;
   grid-template-columns: auto auto auto;
-  column-gap: 5rem;
+  column-gap: 10%;
   margin: 0;
   padding: 0.5rem;
   font-size: 1.25rem;
@@ -460,4 +460,42 @@ textarea {
   margin: 0;
   padding: 0.5rem;
   font-size: 1.5rem;
+}
+
+/* styling for edit recipe modal */
+.modal-editing {
+  display: grid;
+  justify-content: center;
+  text-align: center;
+  background-color: var(--main-color);
+  margin: 2% auto; /* 15% from the top and centered */
+  border: 4px solid white;
+  border-radius: 8px;
+  width: 60%; /* Could be more or less, depending on screen size */
+  word-break: break-all;
+  padding: 0.5rem;
+  overflow: auto;
+}
+
+#currentimage {
+  width: 40%;
+  border: 2px solid white;
+  border-radius: 8px;
+}
+
+#editform {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 55%;
+}
+
+.feature_thumb img {
+  width: 100%;
+  border: 2px solid white;
+  border-radius: 8px;
+  color: white;
+}
+.feature_thumb a {
+  color: white;
+  font-size: 2rem;
 }
