--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,8 @@ body {
   min-height: 350px;
   padding: 0;
   margin: 0;
-  background: url(assets/main1.jpg) no-repeat center / cover;
+  background: url(https://res.cloudinary.com/dnemvvifx/image/upload/v1589159325/tfoxcgdz2lqjkszm18nu.webp)
+    no-repeat center / cover;
 }
 
 /*footer layout*/
